fixed z-index letters bug

--- a/chat/style.css
+++ b/chat/style.css
@@ -443,7 +443,7 @@ body{
 .letters{
     color: var(--floating-letters-color);
     font-size: 18px;
-    z-index: 0; 
+    z-index: -1; 
     position: fixed;
     transform: translate(-50%, -50%);
 }
